# fedora-messaging-git-hook

./: .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  REUSE.toml  Vagrantfile  fedora-messaging-git-hook.spec.in  pyproject.toml  setup.cfg  setuptools-template.py  tox.ini
.github/workflows/: main.yml
.reuse/: dep5
.s2i/: environment
changelog.d/: _template.md
devel/ansible/: playbook.yml
devel/ansible/roles/dev/tasks/: main.yml
docs/: conf.py
fedora_messaging_git_hook/: __init__.py  config.py  hook.py
tests/: conftest.py  test_hook.py
