[tool.poetry]
name = "fedora-messaging-git-hook"
version = "0.1.0"
description = "Fedora Messaging Git Hook"

license = "GPL-3.0-or-later"

authors = [
  "Fedora Infrastructure <admin@fedoraproject.org>"
]

readme = "README.md"
keywords = ["fedora"]
repository = "http://github.com/fedora-infra/fedora-messaging-git-hook"
homepage = "http://github.com/fedora-infra/fedora-messaging-git-hook"
documentation = "https://fedora-messaging-git-hook.readthedocs.io"

include = [
    { path = "tox.ini", format = "sdist" },
    { path = "tests", format = "sdist" },
    { path = "docs", format = "sdist" },
    { path = "*.example", format = "sdist" },

]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8.10"
pydantic-settings = "^2.0.2"


click = "^8.1.3"



[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.10.0"
ruff = ">=0.1.1"
coverage = {extras = ["toml"], version = ">=7.0.0"}
diff-cover = ">=8.0.0"
sphinx = ">=4.0"
myst-parser = ">=0.16"
liccheck = ">=0.6"
pre-commit = ">=2.13"
sphinxcontrib-napoleon = "*"

[tool.poetry.scripts]
"fedora-messaging-git-hook" = "fedora_messaging_git_hook.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
select = ["E", "F", "W", "I", "UP", "S", "B", "RUF"]
line-length = 100
target-version = "py38"
ignore = ["RUF012"]

[tool.ruff.isort]
lines-after-imports = 2
order-by-type = false

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "E501"]
"fedora_messaging_git_hook/__init__.py" = ["F401"]
"changelog.d/get-authors.py" = ["S602", "S603", "S607"]

[tool.coverage.run]
branch = true
source = ["fedora_messaging_git_hook"]

[tool.coverage.paths]
source = ["fedora_messaging_git_hook"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    # Don't complain if tests don't hit defensive assertion code
    "raise AssertionError",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
omit = [
    "fedora_messaging_git_hook/__init__.py","tests/*",
]


[tool.towncrier]
package = "fedora-messaging-git-hook"
filename = "docs/release_notes.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/_template.md"
title_format = "## Version [{version}](http://github.com/fedora-infra/fedora-messaging-git-hook/tree/{version}) - {project_date}"
issue_format = "{issue}"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
